JS and dropdown

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <%#= link_to image_tag('your-logo.png', alt: 'Your Logo', class: 'navbar-brand'), root_path %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
@@ -8,17 +8,16 @@
       <li class="nav-item active">
         <%= link_to 'Home', root_path, class: 'nav-link' %>
       </li>
-      <%# categories.each do |category| %>
-<!--        <li>-->
-          <%#= link_to category.title, category_path(category) %>
-<!--        </li>-->
-      <%# end %>
-      <select>
-        <% categories.each do |category| %>
-          <option><%= category.title %></option>
-        <% end %>
-      </select>
-
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Categories
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <% categories.each do |category| %>
+            <%= link_to category.title, show_by_category_path(category_id: category.id), class: "dropdown-item" %>
+          <% end %>
+        </div>
+      </li>
     </ul>
   </div>
 </nav>
