--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,21 +4,7 @@
       <div class="col-md-6">
         <h3>Contact Us</h3>
         <p>If you have any questions or comments, feel free to reach out to us!</p>
-        <%#= form_with(model: @contact, url: contacts_path) do |form| %>
-<!--          <div class="form-group">-->
-            <%#= form.label :name %>
-            <%#= form.text_field :name, class: "form-control" %>
-<!--          </div>-->
-<!--          <div class="form-group">-->
-            <%#= form.label :email %>
-            <%#= form.email_field :email, class: "form-control" %>
-<!--          </div>-->
-<!--          <div class="form-group">-->
-            <%#= form.label :message %>
-            <%#= form.text_area :message, class: "form-control" %>
-<!--          </div>-->
-          <%#= form.submit "Send", class: "btn btn-primary" %>
-        <%# end %>
+
       </div>
       <div class="col-md-6">
         <h3>Company Name</h3>
@@ -29,3 +15,20 @@
     </div>
   </div>
 </footer>
+
+
+<script>
+    $(document).ready(function() {
+        let $footer = $('footer');
+        let windowHeight = $(window).height();
+        let bodyHeight = document.body.scrollHeight;
+
+        if (bodyHeight < windowHeight) {
+            $footer.css({
+                'position': 'fixed',
+                'bottom': '0',
+                'width': '100%'
+            });
+        }
+    });
+</script>
