--- a/app/views/products/show_by_category.html.erb
+++ b/app/views/products/show_by_category.html.erb
@@ -6,20 +6,22 @@
   <div class="row">
     <% @category.products.each do |product| %>
       <div class="col-md-4">
-        <div class="card mb-4 box-shadow">
-          <% if product.discount_price.present? %>
-            <div class="ribbon"><span>SALE</span></div>
-          <% end %>
-          <div class="card-body">
-            <h4 class="card-title"><%= product.title %></h4>
-            <p class="card-text"><%= product.description %></p>
-            <% if product.discount_price.present? %>
-              <p class="card-text"><strong>Price:</strong> <span class="text-danger"><%= number_to_currency(product.discount_price) %></span> <strike><%= number_to_currency(product.price) %></strike></p>
-            <% else %>
-              <p class="card-text"><strong>Price:</strong> <%= number_to_currency(product.price) %></p>
-            <% end %>
-          </div>
-        </div>
+        <a href="<%= product_path(product) %>">
+            <div class="card mb-4 box-shadow">
+              <% if product.discount_price.present? %>
+                <div class="ribbon"><span>SALE</span></div>
+              <% end %>
+              <div class="card-body">
+                <h4 class="card-title"><%= product.title %></h4>
+                <p class="card-text"><%= product.description %></p>
+                <% if product.discount_price.present? %>
+                  <p class="card-text"><strong>Price:</strong> <span class="text-danger"><%= number_to_currency(product.discount_price) %></span> <strike><%= number_to_currency(product.price) %></strike></p>
+                <% else %>
+                  <p class="card-text"><strong>Price:</strong> <%= number_to_currency(product.price) %></p>
+                <% end %>
+              </div>
+            </div>
+        </a>
       </div>
     <% end %>
   </div>
@@ -50,6 +52,10 @@
         background-color: #ff6b6b;
         background-image: linear-gradient(-45deg, #ff6b6b 0%, #ee6a7b 100%);
         box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 0.5);
+    }
+
+    a{
+        text-decoration: none;
     }
 </style>
 
