--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,4 @@
+<%=render "shared/navbar"  %>
 <h1>New Product</h1>
 
 <%= form_for @product, html: { multipart: true } do |f| %>
@@ -47,3 +48,4 @@
     <%= f.submit "Create", class: "btn btn-primary" %>
   </div>
 <% end %>
+<%=render "shared/footer"  %>
