--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,6 +4,15 @@
     <% if @product.discount_price.present? %>
       <div class="ribbon"><span>SALE</span></div>
     <% end %>
+    <div class="image-gallery">
+      <div class="row">
+        <% if @product.images.any? %>
+          <div class="col-md-4">
+            <%= image_tag @product.images.first.variant(resize_to_fill: [500, 500]), class: "img-thumbnail" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
     <div class="card-body">
       <h1 class="card-title"><%= @product.title %></h1>
       <p class="card-text"><%= @product.description %></p>
@@ -13,34 +22,12 @@
         <p class="card-text"><strong>Price:</strong> <%= number_to_currency(@product.price) %></p>
       <% end %>
     </div>
+    <% if user_signed_in? && current_user.admin? %>
+      <div class="btn-group" role="group">
+        <%= link_to "Edit", edit_product_path(@product), class: "btn btn-secondary" %>
+        <%= link_to "Delete", product_path(@product), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this product?" }, class: "btn btn-danger" %>
+      </div>
+    <% end %>
   </div>
 </div>
 <%= render "shared/footer" %>
-
-<style>
-    .ribbon {
-        width: 80px;
-        height: 80px;
-        overflow: hidden;
-        position: absolute;
-        top: -3px;
-        right: -3px;
-    }
-
-    .ribbon span {
-        font-size: 16px;
-        color: #fff;
-        text-transform: uppercase;
-        text-align: center;
-        line-height: 20px;
-        transform: rotate(45deg);
-        display: block;
-        position: absolute;
-        width: 100px;
-        left: -15px;
-        top: 20px;
-        background-color: #ff6b6b;
-        background-image: linear-gradient(-45deg, #ff6b6b 0%, #ee6a7b 100%);
-        box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 0.5);
-    }
-</style>
