--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <%= link_to 'Home', root_path, class: 'nav-link' %>
       </li>
@@ -21,10 +21,39 @@
       <% if current_user && current_user.admin? %>
         <li class="nav-item">
           <p>Welcome <%= current_user.email %></p>
-          <li><%= link_to "New Product", new_product_path %></li>
-          <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
+        <li><%= link_to "New Product", new_product_path %></li>
+        <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
         </li>
       <% end %>
     </ul>
+    <form class="d-flex mx-3" id="search-form">
+      <%= text_field_tag :search, nil, class: "form-control me-2", placeholder: "Search" %>
+      <%= button_tag "Search", type: "submit", class: "btn btn-outline-secondary", id: "search-btn" %>
+    </form>
   </div>
 </nav>
+
+
+<script>
+    $(document).on('turbolinks:load', function() {
+        $('#search-form').on('keyup', function(event) {
+            if (event.keyCode === 13) {
+                event.preventDefault();
+                $('#search-btn').click();
+            }
+        });
+
+        $('#search-btn').on('click', function() {
+            let searchValue = $('#search-form').find('input[name="search"]').val();
+            $.ajax({
+                type: 'GET',
+                url: '/products',
+                data: { search: searchValue },
+                dataType: 'script'
+            });
+        });
+    });
+</script>
+
+
+
