--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,14 +21,15 @@
       <% if current_user && current_user.admin? %>
         <li class="nav-item">
           <p>Welcome <%= current_user.email %></p>
-        <li><%= link_to "New Product", new_product_path %></li>
-        <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %>
         </li>
+        <li><%= link_to "New Product", new_product_path %></li>
+        <%= link_to "Edit Password", edit_user_registration_path(current_user), method: :get %>
+        <li><%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
       <% end %>
     </ul>
     <form class="d-flex mx-3" id="search-form">
       <%= text_field_tag :search, nil, class: "form-control me-2", placeholder: "Search" %>
-      <%= button_tag "Search", type: "submit", class: "btn btn-outline-secondary", id: "search-btn" %>
+      <%= button_tag "Search", type: "submit", class: "btn btn-outline-secondary", id: "search-btn", name: nil %>
     </form>
   </div>
 </nav>
