--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,7 +25,9 @@
         <li><%= link_to "New Product", new_product_path %></li>
         <%= link_to "Edit Password", edit_user_registration_path(current_user), method: :get %>
         <li><%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
-      <% end %>
+        <li><%= link_to "View Orders", orders_path %></li>
+
+    <% end %>
     </ul>
     <form class="d-flex mx-3" id="search-form">
       <%= text_field_tag :search, nil, class: "form-control me-2", placeholder: "Search" %>
