Editing image, nav style

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,13 +19,20 @@
         </div>
       </li>
       <% if current_user && current_user.admin? %>
-        <li class="nav-item">
-          <p>Welcome <%= current_user.email %></p>
-        </li>
-        <li><%= link_to "New Product", new_product_path %></li>
-        <%= link_to "Edit Password", edit_user_registration_path(current_user), method: :get %>
-        <li><%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
-        <li><%= link_to "View Orders", orders_path %></li>
+        <div>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Admin Menu
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <p><%= link_to "New Product", new_product_path %></p>
+              <p><%= link_to "Edit Password", edit_user_registration_path(current_user), method: :get %></p>
+              <p><%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete } %></p>
+              <p><%= link_to "View Orders", orders_path %></p>
+            </div>
+          </li>
+
+        </div>
 
     <% end %>
     </ul>
@@ -34,6 +41,9 @@
       <%= button_tag "Search", type: "submit", class: "btn btn-outline-secondary", id: "search-btn", name: nil %>
     </form>
   </div>
+  <% if current_user && current_user.admin? %>
+    <p>Welcome <%= current_user.email %></p>
+  <% end %>
 </nav>
 
 
