--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <%#= link_to image_tag('your-logo.png', alt: 'Your Logo', class: 'navbar-brand'), root_path %>
+  <%= link_to image_tag('demo_logo.png', alt: 'Your Logo', class: 'navbar-brand'), root_path %>
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
