--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,39 +2,44 @@
 <div class="container">
   <h1 class="text-center">Products</h1>
 
-  <div class="row">
-    <% @products.each do |product| %>
-      <div class="col-md-4">
-        <a href="<%= product_path(product) %>">
-          <div class="card mb-4 box-shadow">
-            <% if product.discount_price.present? %>
-              <div class="ribbon"><span>SALE</span></div>
-            <% end %>
-            <div class="image-gallery">
-              <div class="row">
-                <div class="col-md-4">
-                  <% if product.images.any? %>
-                    <%= image_tag product.images.first.variant(resize_to_fill: [500, 500]), class: "img-thumbnail" %>
-                  <% else %>
-                    <%= image_tag "image-not-found-icon.png", class: "img-thumbnail not-found" %>
-                  <% end %>
+  <% if @products.present? %>
+    <div class="row">
+      <% @products.each do |product| %>
+        <div class="col-md-4">
+          <a href="<%= product_path(product) %>">
+            <div class="card mb-4 box-shadow">
+              <% if product.discount_price.present? %>
+                <div class="ribbon"><span>SALE</span></div>
+              <% end %>
+              <div class="image-gallery">
+                <div class="row">
+                  <div class="col-md-4">
+                    <% if product.images.any? %>
+                      <%= image_tag product.images.first.variant(resize_to_fill: [500, 500]), class: "img-thumbnail" %>
+                    <% else %>
+                      <%= image_tag "image-not-found-icon.png", class: "img-thumbnail not-found" %>
+                    <% end %>
+                  </div>
                 </div>
               </div>
+              <div class="card-body">
+                <h4 class="card-title"><%= product.title %></h4>
+                <p class="card-text"><%= product.description %></p>
+                <% if product.discount_price.present? %>
+                  <p class="card-text"><strong>Price:</strong> <span class="text-danger"><%= number_to_currency(product.discount_price) %></span> <strike><%= number_to_currency(product.price) %></strike></p>
+                <% else %>
+                  <p class="card-text"><strong>Price:</strong> <%= number_to_currency(product.price) %></p>
+                <% end %>
+              </div>
             </div>
-            <div class="card-body">
-              <h4 class="card-title"><%= product.title %></h4>
-              <p class="card-text"><%= product.description %></p>
-              <% if product.discount_price.present? %>
-                <p class="card-text"><strong>Price:</strong> <span class="text-danger"><%= number_to_currency(product.discount_price) %></span> <strike><%= number_to_currency(product.price) %></strike></p>
-              <% else %>
-                <p class="card-text"><strong>Price:</strong> <%= number_to_currency(product.price) %></p>
-              <% end %>
-            </div>
-          </div>
-        </a>
-      </div>
-    <% end %>
-  </div>
+          </a>
+        </div>
+      <% end %>
+    </div>
+  <% else %>
+    <div class="alert alert-info text-center" role="alert">
+      No products found.
+    </div>
+  <% end %>
 </div>
 <%= render "shared/footer" %>
-
